--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "jotai": "^1.6.5",
+    "nanoid": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
