--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-tracked": "^1.7.9"
+    "react-redux": "^8.0.1",
+    "react-tracked": "^1.7.9",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
