--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "recoil": "^0.7.2",
     "valtio": "^1.6.0",
     "zustand": "^4.0.0-rc.1"
   },
