--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "jotai": "^1.6.5",
     "mobx": "^6.5.0",
+    "mobx-react": "^7.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
